# cepheid

./: Cargo.toml  README.md
src/: constants.rs  lib.rs
src/entities/: lightcurve.rs  mod.rs  observation.rs
src/functions/: mod.rs  normalization.rs  periodicity.rs  vismag.rs
