[package]
name = "cepheid"
version = "0.1.0"
edition = "2024"
description = "A Rust library for working with lightcurve data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmcguigs/cepheid"
keywords = ["photometry", "vismag", "lightcurve"]
categories = ["science", "astronomy", "space"]

[dependencies]
