[package]
name = "cepheid"
version = "0.1.3"
edition = "2024"
description = "A Rust library for working with lightcurve data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmcguigs/cepheid"
keywords = ["photometry", "vismag", "lightcurve"]
categories = ["science"]

[dependencies]
chrono = { version = "0.4" }
rand = "0.9.2"
